// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render with many props assigned 1`] = `
<div
  className="headingContainer"
>
  <h2
    className="Heading secondary"
    id="test-heading-1"
  >
    Test
  </h2>
</div>
`;

exports[`Heading should render with required props 1`] = `
<div
  className="headingContainer"
>
  <h2
    className="Heading secondary"
    id=""
  >
    Test
  </h2>
</div>
`;
